@@ -1,5 +1,10 @@
 2004-09-28  Jorn Baayen  <jbaayen@gnome.org>
 
+	* src/StringUtils.cs: Fix unsigned-to-signed conversion problem.
+	Patch by David Reveman <c99drn@cs.umu.se>.
+
+2004-09-28  Jorn Baayen  <jbaayen@gnome.org>
+
 	* configure.in:
 	* po/ru.po:
 
